link index.js to html

--- a/index.html
+++ b/index.html
@@ -13,11 +13,10 @@
     <li> Data source </li>
 </ul>
 <svg width=300 height=300>
-    <circle r='100'>  </circle>
 </svg>
 </body>
 
-
+<style> circle {fill: lightblue; stroke: black;} </style>
 <script src="https://d3js.org/d3.v6.min.js"></script>
 
 
