--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body style = 'font-size:24pt'>
 <h1>Create a Narrative Visualization</h1>
-<h4>CS416 Project Create a Narrative Visualization</h3>
+<h4>CS416 Project Create a Narrative Visualization</h4>
     <ul style = 'font-size:12pt'>
         <li > Dataset: Amazon Top 50 Bestselling Books 2009 - 2019 </li>
         <li> Data source: https://www.kaggle.com/sootersaalu/amazon-top-50-bestselling-books-2009-2019?select=bestsellers+with+categories.csv </li>
@@ -23,5 +23,5 @@
 
 
 
-<script src="bundle.js"></script>
+<script src="index.js"></script>
 </html>
