--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html><head>
-    <title>Fork of Fork of Fork of Fork of Fork of Fork of CS416 Project_2</title>
+    <title>CS416 Project_2</title>
     <link rel="stylesheet" href="styles.css">
   </head>
   
