--- a/index.html
+++ b/index.html
@@ -217,12 +217,12 @@ d3.select('svg')
     .append("text")
     .attr("class", "tittle")
     .attr("x", width/3).attr("y", 570)
-    .html("Amazon Top 50 Bestselling Books User_Rating VS	Reviews");
+    .html("Amazon Top 50 Bestselling Books User_Rating VS Reviews");
     
     d3.select('svg').append("text")
     .attr("class", "notes")
     .attr("x", width/2-70).attr("y", 590)
-    .html('* Mouseover to see detail, # of reviews shown as logarithmic scales');
+    .html('* Mouseover for detail, # of reviews shown as logarithmic scales');
   
   
   if (theYear <2020) {
