--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ d3.select('svg')
    .append("text").attr("class", "notes")
    .attr("x", width/2-10)
    .attr("y", 40)
-   .html('* Click button to review detail');
+   .html('* Click button to review detail of selected year');
   
 d3.select('svg').append('g')
   .attr("transform", "translate(" + (50)+"," + 50 + ")")
